--- a/VKInternshipTest/VKInternshipTest.csproj
+++ b/VKInternshipTest/VKInternshipTest.csproj
@@ -19,6 +19,14 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="FakeItEasy" Version="7.4.0" />
+    <PackageReference Include="FluentAssertions" Version="6.11.0" />
+    <PackageReference Include="Moq" Version="4.18.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\VKInternship\VKInternship.csproj" />
+    <ProjectReference Include="..\DBCore\DBCore.csproj" />
+    <ProjectReference Include="..\Project\Project.csproj" />
+  </ItemGroup>
 </Project>
