--- a/VKInternship/appsettings.json
+++ b/VKInternship/appsettings.json
@@ -8,9 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "VKInternshipDB": "Host=localhost;Port=5433;Database=VKInternshipDB;Username=postgres;Password=3011"
+    "VKInternshipDB": "Server=db;Host=db;Port=5432;Database=VKInternshipDB;Username=postgres;Password=138"
   },
   "Port": "5000"
 }
-
-
